--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "devstart": "nodemon index.js"
+    "build": "npm install",
+    "start": "node index.js"
   },
   "type": "module",
   "keywords": [],
